name:                Access
version:             0.1.0.0
synopsis:            Better than Lens (tm)
description:         Please see README.md
homepage:            https://github.com/Lazersmoke/Access#readme
license:             GPL-3
license-file:        LICENSE
author:              Lazersmoke
maintainer:          lazersmoke@gmail.com
copyright:           2016 Lazersmoke
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Access
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite Access-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       base, Access, HUnit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/Lazersmoke/Access
